# flutter_rust_net

./: .metadata  AGENTS.md  CHANGELOG.md  FLUTTER_RUST_NET_OVERVIEW_ZH.md  FLUTTER_RUST_NET_PRIORITY_ROADMAP_ZH.md  README.md  flutter_rust_bridge.yaml  pubspec.yaml
docs/: README.md  flutter_rust_network_layer_design.md  flutter_rust_network_layer_design_review_findings_2026-02-24.md
docs/analyse/: rust_network_business_fit_analysis_2026-03-13.md
docs/archived/: README.md  flutter_rust_net_lifecycle_scope_fix_plan_2026-03-12.md  flutter_rust_net_risk_review_findings_2026-03-09.md  flutter_rust_net_staged_review_followups_2026-03-11.md  flutter_rust_network_layer_design_review_findings_2026-02-24.md  p1_status_history_2026-03-12.md
docs/dio_rust_test/: golang_remote_benchmark_server_plan_2026-03-02.md  network_benchmark_aggregation_2026-02-24.md  network_benchmark_audit_2026-02-24.md  (+10 more)
example/: README.md  pubspec.yaml
lib/: flutter_rust_net.dart
native/rust/net_engine/: Cargo.toml  TODO.md
native/rust/net_engine/src/: api.rs  frb_generated.rs  lib.rs
native/rust/net_engine/src/engine/: error.rs  events.rs  mod.rs  scheduler.rs
native/rust/net_engine/src/engine/cache/: README.md  headers.rs  key.rs  mod.rs  policy.rs  prune.rs  storage.rs  tests.rs
native/rust/net_engine/src/engine/client/: README.md  common.rs  lifecycle.rs  mod.rs  request.rs  tests.rs  transfer.rs
test/: flutter_rust_net_test.dart
tool/: _rust_tool_utils.dart  network_bench.dart  p1_aggregate.dart  p1_non_loopback_bench.dart  rust_build.dart  rust_codegen.dart  upload_bench_log.dart
(+80 files in other folders)
